k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api
  namespace: sentiment
spec:
  type: NodePort
  selector:
    app: sentiment-api
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
